app settings and configuring user secrets

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f3040585-303a-489d-a1c7-4a704db0ab5a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
